prevent flicker

--- a/src/components/Wrapper/base.scss
+++ b/src/components/Wrapper/base.scss
@@ -85,7 +85,6 @@ textarea {
   width: 100%;
   border-radius: 4px;
   position: absolute;
-  will-change: transform;
   transition:
     border-radius 0.6s $easeInOutQuint,
     opacity 0.6s $easeInOutQuint,
